--- a/index.html
+++ b/index.html
@@ -30,18 +30,30 @@
       Аэропортов 241</p>
   </section>
   <section class="photo-grid">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
-    <img src="#" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-train.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-atharva-tulsi.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-tuman.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-sochi.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-arisa.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-baikal.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-elbrus.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-kondratiev.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-kamchatka-1.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-kamchatka-2.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-baikal-2.jpg" alt="Фото природы" class="photo-grid__item">
+    <img src="images/photo-grid-ergaki.jpg" alt="Фото природы" class="photo-grid__item">
+  </section>
+  <section class="places">
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <img src="images/place-kosa.jpg" alt="#" class="place__image">
+      <div class="place__website">
+        <p class="place__website__url-heading">URL</p>
+        <a href="https://park-kosa.ru" class="place__website__link">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph"></p>
+      <p class="place__paragraph"></p>
+    </div>
   </section>
 </body>
 </html>
