--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -113,10 +113,19 @@
   </section>
   <section class="cover">
     <div class="cover__overlay">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <h2 class="cover__title">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">До Байкала «на собаках»</a>
+      </h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      <img src="images/cover-trains.jpg" alt=#" class="cover__background">
     </div>
   </section>
+  <footer class="footer">
+      <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link"  target="_blank">Погода</a>
+      <a class="footer__link" href="https://rasp.yandex.ru"   target="_blank">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link"  target="_blank">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link"  target="_blank">Путешествия</a>
+      <p class="footer__copyright">&#169; 2022. Впишите своё имя</p>
+  </footer>
 </body>
 </html>
