--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
     </div>
   </section>
   <section class="cover">
-    <div class="cover__overlay">
+    <div class="container">
+      <img src="/images/cover-trains.jpg" alt="#" class="cover__background">
       <h2 class="cover__title">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">До Байкала «на собаках»</a>
       </h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <div class="cover__overlay"></div>
     </div>
   </section>
   <footer class="footer">
