--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </section>
   <section class="cover">
     <div class="container">
-      <img src="/images/cover-trains.jpg" alt="#" class="cover__background">
+      <img src="images/cover-trains.jpg" alt="#" class="cover__background">
       <div class="container__link">
         <h2 class="cover__title">
           <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">До Байкала «на собаках»</a>
