--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
   <section class="cover">
     <div class="container">
       <img src="images/cover-trains.jpg" alt="#" class="cover__background">
-      <div class="container__link">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
         <h2 class="cover__title">
-          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">До Байкала «на собаках»</a>
+          До Байкала «на собаках»
         </h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      </div>
+      </a>
       <div class="cover__overlay"></div>
     </div>
   </section>
