--- a/index.html
+++ b/index.html
@@ -114,21 +114,23 @@
   <section class="cover">
     <div class="container">
       <img src="images/cover-trains.jpg" alt="#" class="cover__background">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+     <!-- <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
         <h2 class="cover__title">
           До Байкала «на собаках»
         </h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      </a>
+      </a> -->
       <div class="cover__overlay"></div>
     </div>
   </section>
   <footer class="footer">
-      <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-      <a href="https://yandex.ru/pogoda" class="footer__link"  target="_blank">Погода</a>
-      <a class="footer__link" href="https://rasp.yandex.ru"   target="_blank">Расписание</a>
-      <a href="https://calendar.yandex.ru" class="footer__link"  target="_blank">Календарь</a>
-      <a href="https://travel.yandex.ru" class="footer__link"  target="_blank">Путешествия</a>
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link"  target="_blank">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru"   target="_blank">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link"  target="_blank">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link"  target="_blank">Путешествия</a>
+      </nav>
       <p class="footer__copyright">&#169; 2022. Впишите своё имя</p>
   </footer>
 </body>
