--- a/index.html
+++ b/index.html
@@ -112,16 +112,12 @@
     </div>
   </section>
   <section class="cover">
-    <div class="container">
-      <img src="images/cover-trains.jpg" alt="#" class="cover__background">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-        <h2 class="cover__title">
-          До Байкала «на собаках»
-        </h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
+         <h2 class="cover__title">
+           До Байкала «на собаках»
+         </h2>
+         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
-      <div class="cover__overlay"></div>
-    </div>
   </section>
   <footer class="footer">
       <nav class="footer__links">
