--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img src="images/lead-polka.jpg" alt="Полка" class="lead__image">
-    <p class="lead__caption">ваша полка — верхняя</p>
+    <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
   </section>
   <section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -45,7 +45,8 @@
   </section>
   <section class="places">
     <div class="place">
-      <h2 class="place__title">Куршская коса</h2>
+      <h2 class="place__title">Куршская
+        коса</h2>
       <img src="images/place-kosa.jpg" alt="Горы" class="place__image">
       <div class="place__website">
         <p class="place__website__url-heading">URL</p>
@@ -114,7 +115,8 @@
   <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
          <h2 class="cover__title">
-           До Байкала «на собаках»
+           До Байкала
+           «на собаках»
          </h2>
          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
